# reddit_ideology

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  run_pipeline.sbatch
data/: cons_data.json  lib_data.json
logs/: reddit_ideology_431062_1.err  reddit_ideology_431062_1.out  reddit_ideology_431062_2.err  reddit_ideology_431062_2.out  reddit_ideology_431062_3.err  reddit_ideology_431062_3.out
results/cache/: conservative_clusters.pkl  liberal_clusters.pkl
results/metrics/: intra_similarity.csv  semantic_spread.csv  topic_entropy_count.csv
results_M/cache/: conservative_clusters.pkl  liberal_clusters.pkl
results_M/metrics/: cross_similarity.csv  intra_similarity.csv  semantic_spread.csv  topic_entropy_count.csv
results_Q/cache/: conservative_topics.pkl  liberal_topics.pkl
results_Q/metrics/: cross_similarity.csv  intra_similarity.csv  semantic_spread.csv  topic_entropy_count.csv
results_Y/cache/: conservative_clusters.pkl  conservative_embeddings.npy  liberal_clusters.pkl  liberal_embeddings.npy
results_Y/metrics/: cross_similarity.csv  semantic_spread.csv  topic_entropy_count.csv
scripts/: analysis.ipynb
src/reddit_ideology/: __init__.py  __main__.py  cli.py  data_loader.py  embedding.py  metrics.py  openai_utils.py  preprocessing.py  topic_model.py  visualize.py
src/reddit_ideology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reddit_ideology/reddit_ideology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
